--- a/front_end/index1.html
+++ b/front_end/index1.html
@@ -123,7 +123,7 @@
             <th>VAL</th>
         </tr>
     </thead>
-    <tbody id="table-body2">
+    <tbody id="table-body">
         <!-- <tr>
             <td>abc</td>
             <td>11111111111111</td>
@@ -133,7 +133,8 @@
     </tbody>
 </table>
 
-
+<input type="button" value="add more rider" id="add_more_rider">
+<input type="button" value="edit rider" id="edit_rider">
 
 
 <!-- <div class="form-group">
@@ -144,6 +145,6 @@
 <div id="time_show"></div> -->
 
 
-<script src="./app3.js"></script>
+<script src="./app2.js"></script>
 </body>
 </html>
