--- a/front_end/index1.html
+++ b/front_end/index1.html
@@ -133,8 +133,8 @@
     </tbody>
 </table>
 
-<input type="button" value="add more rider" id="add_more_rider">
-<input type="button" value="edit rider" id="edit_rider">
+<!-- <input type="button" value="add more rider" id="add_more_rider">
+<input type="button" value="edit rider" id="edit_rider"> -->
 
 
 <!-- <div class="form-group">
